# The on-chain program is the only workspace member built for BPF. The host-side
# Rust crates (engine/, daemon/) are kept out of the workspace so a plain `cargo test`
# in them never pulls in the program's BPF-only dependency tree. The daemon also depends
# on the sibling `monero` repo, which has no place in this workspace.
[workspace]
resolver = "2"
members = ["programs/sol-escrow"]
exclude = ["engine", "daemon"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
